--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Outfit", sans-serif;
 }
 
-:root {
+#root {
   min-height: 100vh;
   display: flex;
 }
